# Context-Aware-Dev-Log-Automator

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECT_SUMMARY.md  DELIVERABLES.md  GEMINI_READY_ID.md  GEMINI_SETUP.md  GITHUB_UPLOAD.md  INSTALLATION.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py  setup_wizard.py  start-devpulse-gemini.ps1
devpulse/: __init__.py  ai_summarizer.py  cli.py  config.py  database.py  watcher.py
scripts/: devpulse.service.template  install-linux-service.sh  install-windows-service.ps1
